@@ -1,3 +1,9 @@
+TAG: uniprotload-4-4-1-3
+DATE: 06/23/2011
+STAFF: lec
+CHANGES:
+1) makeGOAnnot.py; readMGI2MARKERTYPE; was skipping first line of file
+
 TAG: uniprotload-4-4-1-2
 DATE: 02/28/2011
 STAFF: lec
